# dcmtk

./: CMakeLists.txt  README.md
CMake/: 3rdparty.cmake  dcmtkPrepare.cmake
RapidJson/: BMakeLists.txt  prettywriter.h
RapidJson/internal/: biginteger.h
dcmimage/apps/: CMakeLists.txt  dcm2pnm.cc
dcmimgle/libsrc/: dcmimage.cc  didocu.cc
dcmjpls/apps/: CMakeLists.txt
oflog/include/dcmtk/oflog/: oflog.h
oflog/libsrc/: oflog.cc
ofstd/include/dcmtk/ofstd/: ofcmdln.h
ofstd/libsrc/: ofchrenc.cc
tiff/: CMakeLists.txt  PDFTronChanges.txt
tiff/lib/: StaticLibTIFF.lib  StaticLibTIFF_o.lib  libtiff_d.lib
tiff/libtiff/: mkg3states.c  tif_aux.c  tif_close.c  tif_config.h  tif_config.wince.h  tif_dir.c  tif_dirinfo.c  tif_dirread.c  tif_dirwrite.c  tif_fax3.c  tif_jpeg.c  tif_ojpeg.c  tif_open.c  tif_read.c  tif_unix.c  tif_win32.c  tif_write.c  tif_zip.c  tiffconf.h  tiffiop.h
tiff/test/: ascii_tag.c  custom_dir.c  long_tag.c  raw_decode.c  rewrite_tag.c  short_tag.c  strip_rw.c
tiff/tools/: bmp2tiff.c  fax2ps.c  fax2tiff.c  gif2tiff.c  pal2rgb.c  ppm2tiff.c  ras2tiff.c  raw2tiff.c  rgb2ycbcr.c  thumbnail.c  tiff2bw.c  tiff2pdf.c  tiff2ps.c  tiff2rgba.c  tiffcmp.c  tiffcp.c  tiffcrop.c  tiffdither.c  tiffdump.c  tiffgt.c  tiffinfo.c  tiffmedian.c
zlib/: CMakeLists.txt  gzguts.h
zlib/ImageMagick/: Resource.rc
zlib/lib/: StaticLibZ.lib  StaticLibZ_o.lib
